--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     <div class="col col-lg-12">
                         <div class="card text-left mb-3">
                           <div class="card-body">
-                            <h4 class="card-title">web development</h4>
+                            <h4 class="card-title">Web development</h4>
                             <p class="card-text">
-                                we help in developing website for the internet or a private network. whether 
+                                We help in developing website for the internet or a private network. whether 
                                 it is a single static page of plain text to complec web applications, 
                                 electronic businesses and social network services
                             </p>
@@ -110,26 +110,26 @@
                         </div>
                         <div class="card text-left mb-3">
                             <div class="card-body">
-                                <h4 class="card-title">web designing</h4>
-                                <p class="card-text">we have a team to help you with your web designs, we produce the best designs you can think of</p>
+                                <h4 class="card-title">Web designing</h4>
+                                <p class="card-text">We have a team to help you with your web designs, we produce the best designs you can think of</p>
                             </div>
                         </div>
                         <div class="card text-left mb-3">
                             <div class="card-body">
-                                <h4 class="card-title">creative solution</h4>
-                                <p class="card-text">solving problems must be the easiest things we can help you with because we are a team of geeks that likes to be challenged</p>
+                                <h4 class="card-title">Creative solution</h4>
+                                <p class="card-text">Solving problems must be the easiest things we can help you with because we are a team of geeks that likes to be challenged</p>
                             </div>
                         </div>
                         <div class="card text-left mb-3">
                             <div class="card-body">
-                                <h4 class="card-title">digital marketing</h4>
+                                <h4 class="card-title">Digital marketing</h4>
                                 <p class="card-text">After designing and developing your dream site, we are also "blessed" with skills to help you push whatever your content is to your desired clients</p>
                             </div>
                         </div>
                         <div class="card text-left mb-3">
                             <div class="card-body">
-                                <h4 class="card-title">content writing</h4>
-                                <p class="card-text">we can help you write, edit, and publish content in a digital format.</p>
+                                <h4 class="card-title">Content writing</h4>
+                                <p class="card-text">We can help you write, edit, and publish content in a digital format.</p>
                             </div>
                         </div>
                     </div>
@@ -205,8 +205,8 @@
                         </a>
                     </div>
                     <div class="col-md-5">
-                        <h3>Project Three</h3>
-                        <p>are you bored? say no more. we have created an educative game to help you in
+                        <h3>COLOR GAME</h3>
+                        <p>Are you bored? say no more. we have created an educative game to help you in
                         identifying colors and
                         at the same time, get rid of boredom</p>
                         <a class="btn btn-primary" href="https://rufji.github.io/color-game/">View Project</a>
@@ -225,8 +225,8 @@
                         </a>
                     </div>
                     <div class="col-md-5">
-                        <h3>Project Four</h3>
-                        <p>we are able to create a todo app so you wont miss anyhting in your everyday
+                        <h3>TODO APP</h3>
+                        <p>We are able to create a todo app so you wont miss anyhting in your everyday
                         life</p>
                         <a class="btn btn-primary" href="https://rufji.github.io/todo/">View Project</a>
                     </div>
