--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavId">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">about</a>
+                                <a class="nav-link" href="#about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#services">services</a>
+                                <a class="nav-link" href="#services">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#works">works</a>
+                                <a class="nav-link" href="#works">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">contact</a>
+                                <a class="nav-link" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -68,13 +68,13 @@
 
                 <div class="text-justify">
                     <div class="display-5">
-                        we are the best in creating an online presence for startups
+                        We are the best in creating an online presence for startups
                         <p class="lead">
                         At theDevs, we strive to help business to bring their service and produce to their potential client on the internet
                         </p>
                     </div>
                     <div class="display-5">
-                        mission and vision
+                        Mission and Vision
                         <p class="lead">
                             Our mission is to help bring your ideas to life and to the vast users of the internet community in a fast and reliable way
                         </p>
